# scalable_llm_app_docker_kubernetes

./: .gitignore  pyproject.toml
haystack_llm_app/: Dockerfile.app  Dockerfile.db_api  develop_the_llm.ipynb  docker-compose.yml  kubernetes_deployment.yml
haystack_llm_app/streamlit/: app.py  db_api.py  requirements.txt
haystack_llm_app/streamlit/utils/funcs/: db_interactions.py  rag_pipeline.py
